# ad7124-rs

./: Cargo.toml  README.md  rustfmt.toml
src/: crc8.rs  defs.rs  errors.rs  lib.rs  regs.rs
src/ad7124/: ad7124_async.rs  ad7124_sync.rs  mod.rs
