[package]
name = "ad7124-rs"
version = "0.1.0"
edition = "2021"
authors = ["Adancurusul <1016867898@qq.com>"]
description = "async driver for AD7124"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["adc", "driver","async", "embedded-hal","embedded-hal-driver"]
repository = "https://github.com/Adancurusul/ad7124-rs"

[dependencies]
defmt = "0.3"
embedded-hal = { version = "1.0.0" }
embedded-hal-async = { version = "1.0.0" }

