[package]
name = "ad7124-rs"
version = "0.3.0"
edition = "2021"
authors = ["Adancurusul <1016867898@qq.com>"]
description = "driver for AD7124"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["adc", "driver", "embedded-hal","embedded-hal-driver"]
repository = "https://github.com/Adancurusul/ad7124-rs"

[dependencies]
defmt = "0.3"
embedded-hal = { version = "1.0.0", optional = true }
embedded-hal-async = { version = "1.0.0", optional = true }

[features]
default = ["sync","async","ad7124-8"]
async = ["embedded-hal-async"]
sync = ["embedded-hal"]
ad7124-8 = []
ad7124-4 = []
